registration page modification

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -11,7 +11,7 @@
         <nav aria-label="Main Navigation">
             <div class="logo-container">
                 <img src="../image/boda.webp" alt="SaferBoda Logo" class="logo-image">
-                <div class="logo">SaferBoda</div>
+                <div class="logo">INSTARIDE</div>
             </div>
             <ul>
                 <li><a href="../homepage/homepage.html">Home</a></li>
