--- a/register/register.html
+++ b/register/register.html
@@ -14,7 +14,7 @@
           <div class="forms-wrap">
             <form action="register.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <img src="./boda.webp" alt="Instaride" />
+                <img src="../image/boda.webp" alt="Instaride" />
                 <h4>Instaride</h4>
               </div>
 
