--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="slideshow-overlay">
-                <h2>Welcome to SaferBoda</h2>
+                <h2>Welcome to InstaRide</h2>
                 <button onclick="Services()">BOOK NOW</button>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 <img src="../image/feedback.jpg" alt="Peace of Mind">
                 <div class="testimonial-description">
                     <h3>Peace of Mind</h3>
-                    <p>SaferBoda has given me peace of mind during my travels, especially when I'm out late at night. The safety features are truly invaluable.</p>
+                    <p>InstaRide has given me peace of mind during my travels, especially when I'm out late at night. The safety features are truly invaluable.</p>
                 </div>
             </div>
             <div class="testimonial">
@@ -139,8 +139,8 @@
     <footer>
         <div class="footer-container">
             <div class="footer-section">
-                <h3>About SaferBoda</h3>
-                <p>SaferBoda is dedicated to providing safe and reliable rides to our customers. Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</p>
+                <h3>About InstaRide</h3>
+                <p>InstaRide is dedicated to providing safe and reliable rides to our customers. Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 SaferBoda. All rights reserved.</p>
+            <p>&copy; 2024 InstaRide. All rights reserved.</p>
         </div>
     </footer>
 
