--- a/features/services.html
+++ b/features/services.html
@@ -10,7 +10,7 @@
     <header>
         <nav aria-label="Main Navigation">
             <div class="logo-container">
-                <img src="../register/boda.webp" alt="Instaride Logo" class="logo-image">
+                <img src="../image/boda.webp" alt="Instaride Logo" class="logo-image">
                 <div class="logo-text">Instaride</div>
             </div>
             <ul>
@@ -78,10 +78,10 @@
                 <h3>Follow Us</h3>
                
                 <div class="social-links">
-                    <a href="#"><img src="../homepage/facebook.png" alt="Facebook"></a>
-                    <a href="#"><img src="../homepage/twitter.png" alt="Twitter"></a>
-                    <a href="#"><img src="../homepage/insta.png" alt="Instagram"></a>
-                    <a href="#"><img src="../homepage/link.png" alt="LinkedIn"></a>
+                    <a href="#"><img src="../image/facebook.png" alt="Facebook"></a>
+                    <a href="#"><img src="../image/twitter.png" alt="Twitter"></a>
+                    <a href="#"><img src="../image/insta.png" alt="Instagram"></a>
+                    <a href="#"><img src="../image/link.png" alt="LinkedIn"></a>
                 </div>
             </div>
         </div>
