--- a/register/register.html
+++ b/register/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in & Sign up Form</title>
+    <title>Sign in & Sign up </title>
     <link rel="stylesheet" href="register.css" />
   </head>
   <body>
@@ -14,12 +14,12 @@
           <div class="forms-wrap">
             <form action="register.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <img src="./boda.webp" alt="Instaride" />
-                <h4>Instaride</h4>
+                <img src="../image/boda.webp" alt="Instaride" />
+                <h4>Saferride</h4>
               </div>
 
               <div class="heading">
-                <h2>Welcome Back</h2>
+                <h2>Welcome 😍</h2>
                 <h6>Not registred yet?</h6>
                 <a href="#" class="toggle">Sign up</a>
               </div>
@@ -58,12 +58,12 @@
 
             <form action="register.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="./boda.webp" alt="Instaride" />
-                <h4>Instaride</h4>
+                <img src="../image/boda.webp" alt="Instaride" />
+                <h4>Saferride</h4>
               </div>
 
               <div class="heading">
-                <h2>Get Started</h2>
+                <h2>Get Started ✨</h2>
                 <h6>Already have an account?</h6>
                 <a href="#" class="toggle">Sign in</a>
               </div>
@@ -115,14 +115,14 @@
           <div class="carousel">
             <div class="images-wrapper">
               <img src="./img/image1.png" class="image img-1 show" alt="" />
-              <img src="./register/scanner.jpg" class="image img-2" alt="" />
+              <img src="./image/boda.webp" class="image img-2" alt="" />
               <img src="./img/image3.png" class="image img-3" alt="" />
             </div>
 
             <div class="text-slider">
               <div class="text-wrap">
                 <div class="text-group">
-                  <h2>Welcome to Instaride</h2>
+                  <h2>Welcome to Saferride</h2>
                   <h2>Ride with peace of mind</h2>
                   <h2>Reliable Safety</h2>
                 </div>
