--- a/about/about.html
+++ b/about/about.html
@@ -1,12 +1,9 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Instaride</title>
+    <title>About Us - Saferride</title>
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
@@ -14,11 +11,12 @@
         <nav aria-label="Main Navigation">
             <div class="logo-container">
                 <img src="../image/boda.webp" alt="Instaride Logo" class="logo-image">
-                <div class="logo">Instaride</div>
+                <div class="logo">Saferride</div>
             </div>
-            <ul>
+            <div class="menu-icon" onclick="toggleMenu()">☰</div>
+            <ul id="nav-menu">
                 <li><a href="../homepage/homepage.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="../about/about.html">About</a></li>
                 <li><a href="../features/services.html">Services</a></li>
                 <li><a href="../contact us/contact.html">Contact</a></li>
                 <li><a href="../register/register.html">Register</a></li>
@@ -26,35 +24,35 @@
         </nav>
     </header>
     <main>
-        
         <section id="meet-our-team">
             <div class="team-container">
                 <h2>Meet Our Team</h2>
                 <p>Dedicated individuals working towards a safer urban transportation experience</p>
                 <div class="team-member">
                     <img src="../image/tina.jpg" alt="TINA MARION A- CEO">
-                    <h3>John Doe - CEO</h3>
-                    <p>With over 10 years of experience in urban transportation, John is passionate about revolutionizing the safety and efficiency of urban mobility.</p>
+                    <h3>Tina Marion A</h3>
+                    <p>With over 10 years of experience in urban transportation, Tina is passionate about revolutionizing the safety and efficiency of urban mobility.</p>
                 </div>
                 <div class="team-member">
-                    <img src="path_to_image/sarah_smith.jpg" alt="Sarah Smith - COO">
-                    <h3>Sarah Smith - COO</h3>
-                    <p>As a former urban planner, Sarah brings a unique perspective to Instaride, ensuring that the app meets the needs of riders in diverse urban environments.</p>
+                    <img src="../image/stellab.jpg" alt="Sarah Smith - COO">
+                    <h3>Stella Biyo </h3>
+                    <p>As a daily traveller ,Stella brings a unique perspective to Saferride, 
+                        ensuring that the app meets the needs of riders in diverse urban environments.</p>
                 </div>
                 <div class="team-member">
-                    <img src="path_to_image/michael_johnson.jpg" alt="Michael Johnson - CTO">
-                    <h3>Michael Johnson - CTO</h3>
-                    <p>An expert in mobile app development, Michael leads the technical team in creating innovative solutions for urban rider safety and connectivity.</p>
+                    <img src="../image/daniel.jpg" alt="Michael Johnson - CTO">
+                    <h3>Daniel Mayanja</h3>
+                    <p>An expert in mobile app development, Daniel leads the technical team in creating innovative solutions for urban rider safety and connectivity.</p>
                 </div>
                 <div class="team-member">
-                    <img src="path_to_image/emily_brown.jpg" alt="Emily Brown - CFO">
-                    <h3>Emily Brown - CFO</h3>
-                    <p>Emily oversees the financial operations of Instaride, ensuring sustainable growth and financial stability.</p>
+                    <img src="../image/tina.jpg" alt="Emily Brown - CFO">
+                    <h3>Joy Dricilla N</h3>
+                    <p>Joy oversees the financial operations of Saferride, ensuring sustainable growth and financial stability.</p>
                 </div>
                 <div class="team-member">
-                    <img src="path_to_image/david_wilson.jpg" alt="David Wilson - CMO">
-                    <h3>David Wilson - CMO</h3>
-                    <p>David is responsible for the marketing strategies at Instaride, working to increase brand awareness and customer engagement.</p>
+                    <img src="../image/tina.jpg" alt="David Wilson - CMO">
+                    <h3>Edgar Isingoma </h3>
+                    <p>Edgar is responsible for the marketing strategies, working to increase brand awareness and customer engagement.</p>
                 </div>
             </div>
         </section>
@@ -66,7 +64,7 @@
                     <img src="../image/locationtrack.jpg" alt="Safety Feature Integration">
                     <div class="achievement-description">
                         <h3>Safety Feature Integration</h3>
-                        <p>We successfully integrated advanced safety features into the Instaride app, enhancing the overall safety of urban riders.</p>
+                        <p>We successfully integrated advanced safety features into the Saferride app, enhancing the overall safety of urban riders.</p>
                     </div>
                 </div>
                 <div class="achievement">
@@ -89,22 +87,20 @@
     <footer>
         <div class="footer-container">
             <div class="footer-section">
-                <h3>About Instaride</h3>
-                <p>Instaride is dedicated to providing safe and reliable rides to our customers. Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</p>
+                <h3>About Saferride</h3>
+                <p>Saferride is dedicated to providing safe and reliable rides to our customers. Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="features.html">Features</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="safety-tips.html">Safety Tips</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="register.html">Register</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Follow Us</h3>
-                
                 <div class="social-links">
                     <a href="#"><img src="../image/facebook.png" alt="Facebook"></a>
                     <a href="#"><img src="../image/twitter.png" alt="Twitter"></a>
@@ -112,11 +108,17 @@
                     <a href="#"><img src="../image/link.png" alt="LinkedIn"></a>
                 </div>
             </div>
-            </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 Instaride. All rights reserved.</p>
+            <p>&copy; 2024 Saferride. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        function toggleMenu() {
+            const navMenu = document.getElementById('nav-menu');
+            navMenu.classList.toggle('show');
+        }
+    </script>
 </body>
 </html>
