--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SaferBoda</title>
+    <title>Saferride</title>
     <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <nav aria-label="Main Navigation">
             <div class="logo-container">
                 <img src="../image/boda.webp" alt="SaferBoda Logo" class="logo-image">
-                <div class="logo">SaferBoda</div>
+                <div class="logo">Saferride</div>
             </div>
             <ul>
                 <li><a href="../homepage/homepage.html">Home</a></li>
@@ -29,20 +29,21 @@
                 <div class="slide fade">
                     <img src="../image/slide1.jpg" alt="Image 2">
                 </div>
-               
                 <div class="slide fade">
-                    <img src="../image/back.jpg" alt="Image 4">
+                    <img src="../image/slide2.png" alt="Image 4">
                 </div>
             </div>
             <div class="slideshow-overlay">
-                <h2>Welcome to SaferBoda</h2>
-                <button onclick="Services()">BOOK NOW</button>
+                <h2>Welcome to Saferride</h2>
+                <button onclick="Services()">USE APP</button>
             </div>
         </div>
     </header>
 
     <section id="about">
         <div class="about-container">
+            <h2>About Us</h2>
+            <h1> Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</h1>
             <div class="about-card">
                 <img src="../image/scanner.jpg" alt="Enhanced Safety Features">
                 <h3>Enhanced Safety Features</h3>
@@ -69,7 +70,7 @@
             <h2>Advanced Safety Features</h2>
             <p>Ride confidently knowing that our app is equipped with advanced safety features to keep you and your loved ones protected at all times.</p>
             <div class="safety-feature">
-                <img src="../image/real-time-connectivity.jpg" alt="Real-time Connectivity">
+                <img src="../image/slide5.jpg" alt="Real-time Connectivity">
                 <div class="feature-description">
                     <h3>Real-time Connectivity</h3>
                     <p>Stay connected with family and emergency services in real-time, providing peace of mind during every ride.</p>
@@ -85,7 +86,7 @@
                     <h3>Location Sharing</h3>
                     <p>Easily share ride information with family members, allowing them to track your journey and know your exact location at any time.</p>
                 </div>
-                <img src="../images/location.jpg" alt="Location Sharing">
+                <img src='../image/locationtrack.jpg' alt="Location Sharing">
             </div>
         </div>
     </section>
@@ -139,15 +140,15 @@
     <footer>
         <div class="footer-container">
             <div class="footer-section">
-                <h3>About SaferBoda</h3>
-                <p>SaferBoda is dedicated to providing safe and reliable rides to our customers. Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</p>
+                <h3>About Saferride</h3>
+                <p>Saferride is dedicated to providing safe and reliable rides to our customers. Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="../homepage/homepage.html">Home</a></li>
                     <li><a href="../about/about.html">About</a></li>
-                    <li><a href="../featurs/services.html">Services</a></li>
+                    <li><a href="../features/services.html">Services</a></li>
                     <li><a href="../contact us/contact.html">Contact</a></li>
                     <li><a href="../register/register.html">Register</a></li>
                 </ul>
@@ -163,7 +164,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 SaferBoda. All rights reserved.</p>
+            <p>&copy; 2024 Saferride. All rights reserved.</p>
         </div>
     </footer>
 
