--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -13,7 +13,10 @@
                 <img src="../image/boda.webp" alt="SaferBoda Logo" class="logo-image">
                 <div class="logo">Saferride</div>
             </div>
-            <ul>
+            <button class="menu-toggle" aria-label="Toggle menu">
+                <span class="menu-icon">&#9776;</span>
+            </button>
+            <ul class="nav-links">
                 <li><a href="../homepage/homepage.html">Home</a></li>
                 <li><a href="../about/about.html">About</a></li>
                 <li><a href="../features/services.html">Services</a></li>
@@ -43,7 +46,7 @@
     <section id="about">
         <div class="about-container">
             <h2>About Us</h2>
-            <h1> Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</h1>
+            <h1>Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</h1>
             <div class="about-card">
                 <img src="../image/scanner.jpg" alt="Enhanced Safety Features">
                 <h3>Enhanced Safety Features</h3>
@@ -66,10 +69,10 @@
     </section>
 
     <section id="safety-features">
-        <div class="safety-features-container">
+        <div class="section-container">
             <h2>Advanced Safety Features</h2>
             <p>Ride confidently knowing that our app is equipped with advanced safety features to keep you and your loved ones protected at all times.</p>
-            <div class="safety-feature">
+            <div class="card">
                 <img src="../image/slide5.jpg" alt="Real-time Connectivity">
                 <div class="feature-description">
                     <h3>Real-time Connectivity</h3>
@@ -80,8 +83,8 @@
     </section>
 
     <section id="location-sharing">
-        <div class="location-sharing-container">
-            <div class="location-feature">
+        <div class="section-container">
+            <div class="card">
                 <div class="feature-description">
                     <h3>Location Sharing</h3>
                     <p>Easily share ride information with family members, allowing them to track your journey and know your exact location at any time.</p>
@@ -92,8 +95,8 @@
     </section>
 
     <section id="emergency-alerts">
-        <div class="emergency-alerts-container">
-            <div class="emergency-feature">
+        <div class="section-container">
+            <div class="card">
                 <img src="../image/panic.png" alt="Quick Emergency Alerts">
                 <div class="feature-description">
                     <h3>Quick Emergency Alerts</h3>
@@ -104,17 +107,17 @@
     </section>
 
     <section id="customer-testimonials">
-        <div class="testimonials-container">
+        <div class="section-container">
             <h2>Customer Testimonials</h2>
             <p>See what our satisfied customers have to say about their experience with our app and the peace of mind it has provided them.</p>
-            <div class="testimonial">
+            <div class="card">
                 <img src="../image/feedback.jpg" alt="Peace of Mind">
                 <div class="testimonial-description">
                     <h3>Peace of Mind</h3>
                     <p>InstaRide has given me peace of mind during my travels, especially when I'm out late at night. The safety features are truly invaluable.</p>
                 </div>
             </div>
-            <div class="testimonial">
+            <div class="card">
                 <img src="../image/safety.jpg" alt="Reliable Safety">
                 <div class="testimonial-description">
                     <h3>Reliable Safety</h3>
@@ -125,7 +128,7 @@
     </section>
 
     <section id="contact-us">
-        <div class="contact-container">
+        <div class="section-container">
             <h2>Contact Us</h2>
             <p>Have questions or feedback? We'd love to hear from you. Get in touch with us today.</p>
             <form class="contact-form">
