--- a/register/register.html
+++ b/register/register.html
@@ -138,6 +138,13 @@
         </div>
       </div>
     </main>
+    <script>
+      document.getElementById("sign-btn").addEventListener("click", function(event) {
+          event.preventDefault();  // Prevent the default form submission behavior
+          window.location.href = "signin.html";  // Redirect to the sign-in page
+      });
+  </script>
+  
 
     <!-- Javascript file -->
 
