--- a/features/services.html
+++ b/features/services.html
@@ -20,7 +20,7 @@
             </div>
             <ul id="menu">
                 <li><a href="../homepage/homepage.html">Home</a></li>
-                <li><a href="../about/About.html">About</a></li>
+                <li><a href="../about/about.html">About</a></li>
                 <li><a href="../features/services.html">Services</a></li>
                 <li><a href="../contact us/contact.html">Contact</a></li>
                 <li><a href="../register/register.html">Register</a></li>
@@ -77,7 +77,7 @@
         <section id="schedule-your-ride">
             <div class="schedule-container">
                 <h2>Schedule Your Ride</h2>
-                <p>Book your ride with Instaride today</p>
+                <h4>Book your ride with Instaride today</h4>
                 <div class="schedule-content">
                     <img src="../image/schedules.jpg" alt="Convenient Scheduling">
                     <div class="schedule-description">
