--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saferride</title>
+    <title>SaferRide</title>
     <link rel="stylesheet" href="homepage.css">
 </head>
 
@@ -13,7 +13,7 @@
         <nav aria-label="Main Navigation">
             <div class="logo-container">
                 <img src="../image/boda.webp" alt="SaferBoda Logo" class="logo-image">
-                <div class="logo">Saferride</div>
+                <div class="logo">SaferRide</div>
             </div>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <span class="menu-icon">&#9776;</span>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="slideshow-overlay">
-                <h2>Welcome to Saferride</h2>
+                <h2>Welcome to SaferRide</h2>
                 <button onclick="Services()">DOWNLOAD APP</button>
             </div>
         </div>
@@ -48,7 +48,8 @@
     <section id="about">
         <div class="about-container">
             <h2>About Us</h2>
-            <h4 style="margin-bottom: 1.5rem;">Our advanced safety features and customer-focused approach ensure peace of mind for every ride.</h4>
+            <h4 style="margin-bottom: 1.5rem;">Our advanced safety features and customer-focused approach ensure peace
+                of mind for every ride.</h4>
             <div class="about-cards">
                 <div class="about-card">
                     <img src="../image/scanner.jpg" alt="Enhanced Safety Features">
@@ -86,14 +87,16 @@
                     <img src="../image/slide5.jpg" alt="Real-time Connectivity">
                     <div class="feature-description">
                         <h3>Real-time Connectivity</h3>
-                        <p>Stay connected with family and emergency services in real-time, providing peace of mind during
+                        <p>Stay connected with family and emergency services in real-time, providing peace of mind
+                            during
                             every ride.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="feature-description">
                         <h3>Location Sharing</h3>
-                        <p>Easily share ride information with family members, allowing them to track your journey and know
+                        <p>Easily share ride information with family members, allowing them to track your journey and
+                            know
                             your exact location at any time.</p>
                     </div>
                     <img src='../image/locationtrack.jpg' alt="Location Sharing">
@@ -102,7 +105,8 @@
                     <img src="../image/panic.png" alt="Quick Emergency Alerts">
                     <div class="feature-description">
                         <h3>Quick Emergency Alerts</h3>
-                        <p>In case of an emergency, our app enables you to swiftly alert emergency contacts for immediate
+                        <p>In case of an emergency, our app enables you to swiftly alert emergency contacts for
+                            immediate
                             assistance, ensuring your safety is always a top priority.</p>
                     </div>
                 </div>
@@ -112,44 +116,29 @@
     <section id="customer-testimonials">
         <div class="section-container">
             <h2>Customer Testimonials</h2>
-            <h4>See what our satisfied customers have to say about their experience with our app and the peace of mind it
+            <h4>See what our satisfied customers have to say about their experience with our app and the peace of mind
+                it
                 has provided them.</h4>
             <div class="slideshow-container">
-                <div class="testimonal-slide">
-                    <div class="safety-feature">
-                        <img src="../image/feedback.jpg" alt="Peace of Mind">
-                        <div class="feature-description">
-                            <h3>Peace of Mind</h3>
-                            <p>InstaRide has given me peace of mind during my travels, especially when I'm out late at
-                                night. The safety features are truly invaluable.</p>
-                        </div>
+                <div class="safety-feature">
+                    <img src="../image/feedback.jpg" alt="Peace of Mind">
+                    <div class="feature-description">
+                        <h3>Peace of Mind</h3>
+                        <p>SaferRide has given me peace of mind during my travels, especially when I'm out late at
+                            night. The safety features are truly invaluable.</p>
                     </div>
                 </div>
-                <div class="testimonal-slide">
-                    <div class="safety-feature">
-                        <img src="../image/safety.jpg" alt="Reliable Safety">
-                        <div class="feature-description">
-                            <h3>Reliable Safety</h3>
-                            <p>I feel much safer using SaferBoda, knowing that my loved ones can track my ride and that
-                                I have the Panic Button feature at my fingertips.</p>
-                        </div>
+                <div class="safety-feature">
+                    <img src="../image/safety.jpg" alt="Reliable Safety">
+                    <div class="feature-description">
+                        <h3>Reliable Safety</h3>
+                        <p>I feel much safer using SaferBoda, knowing that my loved ones can track my ride and that
+                            I have the Panic Button feature at my fingertips.</p>
                     </div>
                 </div>
-                <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-                <a class="next" onclick="changeSlide(1)">&#10095;</a>
-            </div>
-
-            <div class="navigation-dots">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
             </div>
         </div>
     </section>
-
-
-
-
-
     <section id="contact-us">
         <div class="section-container">
             <h2>Contact Us</h2>
@@ -162,7 +151,6 @@
             </form>
         </div>
     </section>
-
     <footer>
         <div class="footer-container">
             <div class="footer-section">
@@ -194,7 +182,6 @@
             <p>&copy; 2024 SaferBoda. All rights reserved.</p>
         </div>
     </footer>
-
     <script src="homepage.js"></script>
 </body>
 
