--- a/register/register.html
+++ b/register/register.html
@@ -14,13 +14,12 @@
           <div class="forms-wrap">
             <form action="register.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <img src="../image/boda.webp" alt="Instaride" />
-                <h4>Saferride</h4>
+                <img src="../image/boda.webp" alt="SaferRide" />
+                <h2>SaferRide</h2>
               </div>
-
               <div class="heading">
                 <h2>Welcome 😍</h2>
-                <h6>Not registred yet?</h6>
+                <h6>Not registered yet?</h6>
                 <a href="#" class="toggle">Sign up</a>
               </div>
 
@@ -58,8 +57,8 @@
 
             <form action="register.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="../image/boda.webp" alt="Instaride" />
-                <h4>Saferride</h4>
+                <img src="../image/boda.webp" alt="SaferRide" />
+                <h4>SaferRide</h4>
               </div>
 
               <div class="heading">
@@ -111,14 +110,12 @@
               </div>
             </form>
           </div>
-
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="./img/image1.png" class="image img-1 show" alt="" />
-              <img src="./image/boda.webp" class="image img-2" alt="" />
-              <img src="./img/image3.png" class="image img-3" alt="" />
+              <img src="../image/image1.png" class="image img-1 show" alt="" />
+              <img src="../image/boda.webp" class="image img-2" alt="" />
+              <img src="../image/image3.png" class="image img-3" alt="" />
             </div>
-
             <div class="text-slider">
               <div class="text-wrap">
                 <div class="text-group">
@@ -127,27 +124,22 @@
                   <h2>Reliable Safety</h2>
                 </div>
               </div>
-
               <div class="bullets">
                 <span class="active" data-value="1"></span>
                 <span data-value="2"></span>
                 <span data-value="3"></span>
               </div>
             </div>
-          </div>
+            </div>
         </div>
       </div>
     </main>
     <script>
       document.getElementById("sign-btn").addEventListener("click", function(event) {
-          event.preventDefault();  // Prevent the default form submission behavior
-          window.location.href = "signin.html";  // Redirect to the sign-in page
+          event.preventDefault()
+          window.location.href = "signin.html";  
       });
   </script>
-  
-
-    <!-- Javascript file -->
-
     <script src="register.js"></script>
   </body>
 </html>
