changes on home screen

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="slideshow-overlay">
-                <h2>Welcome to SaferBoda</h2>
+                <h2>Welcome to Saferride</h2>
                 <button onclick="Services()">BOOK NOW</button>
             </div>
         </div>
