changes on about

--- a/about/about.html
+++ b/about/about.html
@@ -45,7 +45,7 @@
                     <p>An expert in mobile app development, Daniel leads the technical team in creating innovative solutions for urban rider safety and connectivity.</p>
                 </div>
                 <div class="team-member">
-                    <img src="../image/tina.jpg" alt="Emily Brown - CFO">
+                    <img src="../image/joy.jpg" alt="Emily Brown - CFO">
                     <h3>Joy Dricilla N</h3>
                     <p>Joy oversees the financial operations of Saferride, ensuring sustainable growth and financial stability.</p>
                 </div>
