changes on home screen

--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -154,8 +154,8 @@
     <footer>
         <div class="footer-container">
             <div class="footer-section">
-                <h3>About SaferBoda</h3>
-                <p>SaferBoda is dedicated to providing safe and reliable rides to our customers. Our advanced safety
+                <h3>About Saferride</h3>
+                <p>Saferride is dedicated to providing safe and reliable rides to our customers. Our advanced safety
                     features and customer-focused approach ensure peace of mind for every ride.</p>
             </div>
             <div class="footer-section">
@@ -179,7 +179,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 SaferBoda. All rights reserved.</p>
+            <p>&copy; 2024 Saferride. All rights reserved.</p>
         </div>
     </footer>
     <script src="homepage.js"></script>
