--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SaferRide</title>
+    <title>Saferride</title>
     <link rel="stylesheet" href="homepage.css">
 </head>
 
@@ -13,7 +13,7 @@
         <nav aria-label="Main Navigation">
             <div class="logo-container">
                 <img src="../image/boda.webp" alt="SaferBoda Logo" class="logo-image">
-                <div class="logo">SaferRide</div>
+                <div class="logo">Saferride</div>
             </div>
             <button class="menu-toggle" aria-label="Toggle menu">
                 <span class="menu-icon">&#9776;</span>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="slideshow-overlay">
-                <h2>Welcome to SaferRide</h2>
+                <h2>Welcome to Saferride</h2>
                 <button onclick="Services()">DOWNLOAD APP</button>
             </div>
         </div>
@@ -124,7 +124,7 @@
                     <img src="../image/feedback.jpg" alt="Peace of Mind">
                     <div class="feature-description">
                         <h3>Peace of Mind</h3>
-                        <p>SaferRide has given me peace of mind during my travels, especially when I'm out late at
+                        <p>Saferride has given me peace of mind during my travels, especially when I'm out late at
                             night. The safety features are truly invaluable.</p>
                     </div>
                 </div>
