--- a/register/register.html
+++ b/register/register.html
@@ -111,14 +111,12 @@
               </div>
             </form>
           </div>
-
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="./img/image1.png" class="image img-1 show" alt="" />
-              <img src="./image/boda.webp" class="image img-2" alt="" />
-              <img src="./img/image3.png" class="image img-3" alt="" />
+              <!-- <img src="./image/image1.png" class="image img-1 show" alt="" />
+              <img src="../image/boda.webp" class="image img-2" alt="" />
+              <img src="../image/image3.png" class="image img-3" alt="" /> -->
             </div>
-
             <div class="text-slider">
               <div class="text-wrap">
                 <div class="text-group">
