origis edgar picture

--- a/about/about.html
+++ b/about/about.html
@@ -51,7 +51,7 @@
                     <p>Joy oversees the financial operations of Saferride, ensuring sustainable growth and financial stability.</p>
                 </div>
                 <div class="team-member">
-                    <img src="../image/tina.jpg" alt="David Wilson - CMO">
+                    <img src="../image/origis.jpg" alt="David Wilson - CMO">
                     <h3>Edgar Isingoma </h3>
                     <p>Edgar is responsible for the marketing strategies, working to increase brand awareness and customer engagement.</p>
                 </div>
