redone origis image

--- a/about/about.html
+++ b/about/about.html
@@ -30,28 +30,28 @@
                 <h2>Meet Our Team</h2>
                 <p>Dedicated individuals working towards a safer urban transportation experience</p>
                 <div class="team-member">
-                    <img src="../image/tina.jpg" alt="TINA MARION A- CEO">
+                    <img src="../image/tina.jpg" alt="Tina Marion A- CEO">
                     <h3>Tina Marion A</h3>
                     <p>With over 10 years of experience in urban transportation, Tina is passionate about revolutionizing the safety and efficiency of urban mobility.</p>
                 </div>
                 <div class="team-member">
-                    <img src="../image/stellab.jpg" alt="Sarah Smith - COO">
+                    <img src="../image/stellab.jpg" alt="Stella">
                     <h3>Stella Biyo </h3>
                     <p>As a daily traveller ,Stella brings a unique perspective to Saferride, 
                         ensuring that the app meets the needs of riders in diverse urban environments.</p>
                 </div>
                 <div class="team-member">
-                    <img src="../image/daniel.jpg" alt="Michael Johnson - CTO">
+                    <img src="../image/daniel.jpg" alt="Daniel">
                     <h3>Daniel Mayanja</h3>
                     <p>An expert in mobile app development, Daniel leads the technical team in creating innovative solutions for urban rider safety and connectivity.</p>
                 </div>
                 <div class="team-member">
-                    <img src="../image/joy.jpg" alt="Emily Brown - CFO">
+                    <img src="../image/joy.jpg" alt="Joy Dricilla">
                     <h3>Joy Dricilla N</h3>
                     <p>Joy oversees the financial operations of Saferride, ensuring sustainable growth and financial stability.</p>
                 </div>
                 <div class="team-member">
-                    <img src="../image/origis.jpg" alt="David Wilson - CMO">
+                    <img src="../image/origis.png" alt="Edgar Isingoma">
                     <h3>Edgar Isingoma </h3>
                     <p>Edgar is responsible for the marketing strategies, working to increase brand awareness and customer engagement.</p>
                 </div>
